# jobs_filter

./: .pre-commit-config.yaml  main.py  pyproject.toml  ruff.toml
src/job/: __init__.py  router.py
src/jobs_filter/: __init__.py
