[project]
name = "jobs-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.16",
]

[tool.ruff]
indent-width = 2
