[project]
name = "jobs-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tempura327", email = "cks6658324@yahoo.com.tw" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
jobs-filter = "jobs_filter:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []